--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "http-proxy": "^1.18.1"
   }
