--- a/auth/package.json
+++ b/auth/package.json
@@ -12,11 +12,9 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.0"
-  },
-  "devDependencies": {
-    "dotenv": "^16.0.3"
   }
 }
