--- a/api-gateway/package.json
+++ b/api-gateway/package.json
@@ -11,6 +11,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.9",
+    "axios": "^1.12.2",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "http-proxy": "^1.18.1"
