--- a/product/package.json
+++ b/product/package.json
@@ -14,13 +14,11 @@
     "amqplib": "^0.10.9",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
+    "dotenv": "^16.6.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
     "mocha": "^10.2.0",
+    "mongoose": "^7.8.7",
     "uuid": "^9.0.0"
-  },
-  "devDependencies": {
-    "dotenv": "^16.6.1",
-    "mongoose": "^7.0.1"
   }
 }
