--- a/.github/workflows/security-quality.yml
+++ b/.github/workflows/security-quality.yml
@@ -42,10 +42,10 @@ jobs:
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
-        args: --severity-threshold=high --file=${{ matrix.service }}/package.json
+        args: --severity-threshold=high --file=${{ matrix.service }}/package.json --sarif-file-output=snyk.sarif
     
     - name: Upload Snyk results to GitHub Code Scanning
-      uses: github/codeql-action/upload-sarif@v2
+      uses: github/codeql-action/upload-sarif@v3
       if: always()
       with:
         sarif_file: snyk.sarif
@@ -65,8 +65,8 @@ jobs:
       with:
         node-version: '18'
     
-    - name: SonarCloud Scan
-      uses: SonarSource/sonarcloud-github-action@master
+    - name: SonarQube Scan
+      uses: sonarsource/sonarqube-scan-action@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -97,7 +97,7 @@ jobs:
         output: 'trivy-results-${{ matrix.service }}.sarif'
     
     - name: Upload Trivy scan results
-      uses: github/codeql-action/upload-sarif@v2
+      uses: github/codeql-action/upload-sarif@v3
       if: always()
       with:
         sarif_file: 'trivy-results-${{ matrix.service }}.sarif'
