--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,105 +2,71 @@ name: CI/CD Pipeline
 
 on:
   push:
-    branches: [ main, develop ]
+    branches:
+      - main
+      - develop
   pull_request:
-    branches: [ main ]
+    branches:
+      - main
 
-env:
-  NODE_VERSION: '18'
-  
 jobs:
-  # Job kiểm tra code và chạy test
-  test:
-    name: Test Services
+  build-and-push:
     runs-on: ubuntu-latest
-    
     strategy:
       matrix:
-        service: [auth, product, order, api-gateway]
-    
+        service:
+          - auth
+          - product
+          - order
+          - api-gateway
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: ${{ env.NODE_VERSION }}
-        cache: 'npm'
-        cache-dependency-path: '${{ matrix.service }}/package-lock.json'
-    
-    - name: Install dependencies
-      run: |
-        cd ${{ matrix.service }}
-        npm ci
-    
-    - name: Run linting
-      run: |
-        cd ${{ matrix.service }}
-        npm run lint || echo "No lint script found"
-    
-    - name: Run tests
-      run: |
-        cd ${{ matrix.service }}
-        npm test || echo "No test script found"
-    
-    - name: Generate test coverage
-      run: |
-        cd ${{ matrix.service }}
-        npm run test:coverage || echo "No coverage script found"
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-  # Job build Docker images
-  build:
-    name: Build Docker Images
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: Install dependencies
+        run: |
+          cd ${{ matrix.service }}
+          npm ci
+
+      - name: Run tests
+        run: |
+          cd ${{ matrix.service }}
+          npm test || echo "No test script found"
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./${{ matrix.service }}
+          file: ./${{ matrix.service }}/Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_USERNAME }}/eproject-${{ matrix.service }}:latest
+
+  sonarcloud:
+    name: SonarCloud Scan
     runs-on: ubuntu-latest
-    needs: test
-    if: github.ref == 'refs/heads/main'
-    
-    strategy:
-      matrix:
-        service: [auth, product, order, api-gateway]
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
-    
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-    
-    - name: Extract metadata
-      id: meta
-      uses: docker/metadata-action@v5
-      with:
-        images: ${{ secrets.DOCKER_USERNAME }}/eproject-${{ matrix.service }}
-        tags: |
-          type=ref,event=branch
-          type=ref,event=pr
-          type=sha,prefix={{branch}}-
-          type=raw,value=latest,enable={{is_default_branch}}
-    
-    - name: Build and push Docker image
-      uses: docker/build-push-action@v5
-      with:
-        context: ./${{ matrix.service }}
-        file: ./${{ matrix.service }}/Dockerfile
-        push: true
-        tags: ${{ steps.meta.outputs.tags }}
-        labels: ${{ steps.meta.outputs.labels }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+      - uses: actions/checkout@v4
+      - name: SonarCloud Scan
+        uses: sonarsource/sonarqube-scan-action@master
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   # Job deploy lên staging
   deploy-staging:
     name: Deploy to Staging
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-and-push
     if: github.ref == 'refs/heads/develop'
     environment: staging
     
@@ -126,7 +92,7 @@ jobs:
   deploy-production:
     name: Deploy to Production
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-and-push
     if: github.ref == 'refs/heads/main'
     environment: production
     
