test ci/cd docker

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -50,7 +50,7 @@ jobs:
           context: ./${{ matrix.service }}
           file: ./${{ matrix.service }}/Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_USERNAME }}/eproject-${{ matrix.service }}:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/tulamhomnay:latest
 
   sonarcloud:
     name: SonarCloud Scan
