--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline
+name: CI/CD with Docker
 
 on:
   push:
@@ -10,115 +10,43 @@ on:
       - main
 
 jobs:
-  build-and-push:
+  test:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service:
-          - auth
-          - product
-          - order
-          - api-gateway
+        service: [auth, order, product, api-gateway]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
         with:
           node-version: '18'
-
-      - name: Install dependencies
-        run: |
+      - run: |
           cd ${{ matrix.service }}
           npm ci
-
-      - name: Run tests
-        run: |
-          cd ${{ matrix.service }}
           npm test || echo "No test script found"
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
+  docker-build-push:
+    needs: test
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        service: [auth, order, product, api-gateway]
+    steps:
+      - uses: actions/checkout@v4
+      - uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
+      - uses: docker/build-push-action@v5
         with:
           context: ./${{ matrix.service }}
           file: ./${{ matrix.service }}/Dockerfile
           push: true
-          tags: |
-            ${{ secrets.DOCKER_USERNAME }}/auth-cicd:latest
-            ${{ secrets.DOCKER_USERNAME }}/product-cicd:latest
-            ${{ secrets.DOCKER_USERNAME }}/order-cicd:latest
-            ${{ secrets.DOCKER_USERNAME }}/api-gateway-cicd:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/${{ matrix.service }}-cicd:latest
 
-  sonarcloud:
-    name: SonarCloud Scan
+  deploy:
+    needs: docker-build-push
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarqube-scan-action@master
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-
-  # Job deploy lên 
-  deploy-staging:
-    name: Deploy to Staging
-    runs-on: ubuntu-latest
-    needs: build-and-push
-    if: github.ref == 'refs/heads/develop'
-    environment: staging
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Deploy to staging server
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.STAGING_HOST }}
-        username: ${{ secrets.STAGING_USER }}
-        key: ${{ secrets.STAGING_SSH_KEY }}
-        script: |
-          cd /path/to/staging/eproject
-          git pull origin develop
-          docker-compose -f docker-compose.staging.yml down
-          docker-compose -f docker-compose.staging.yml pull
-          docker-compose -f docker-compose.staging.yml up -d
-          docker system prune -f
-
-  # Job deploy lên production
-  deploy-production:
-    name: Deploy to Production
-    runs-on: ubuntu-latest
-    needs: build-and-push
-    if: github.ref == 'refs/heads/main'
-    environment: production
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Deploy to production server
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.PRODUCTION_HOST }}
-        username: ${{ secrets.PRODUCTION_USER }}
-        key: ${{ secrets.PRODUCTION_SSH_KEY }}
-        script: |
-          cd /path/to/production/eproject
-          git pull origin main
-          docker-compose down
-          docker-compose pull
-          docker-compose up -d
-          docker system prune -f
-    
-    - name: Health check
-      run: |
-        sleep 30
-        curl -f ${{ secrets.PRODUCTION_URL }}/health || exit 1
+      - name: Deploy step (giả lập)
+        run: echo "Deploy thành công!"
