fix: test sonarcloud scan

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -18,5 +18,5 @@ sonar.javascript.lcov.reportPaths=auth/coverage/lcov.info,product/coverage/lcov.
 sonar.language=js
 sonar.sourceEncoding=UTF-8
 
-# Quality gate settings
+# Quality gate settings co len met qua roi 
 sonar.qualitygate.wait=true
