--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,4 @@
-sonar.projectKey=22665381-LeThiHien-EProject
-sonar.organization=lethihien1424
+sonar.host.url=https://sonarcloud.io
 
 # Project metadata
 sonar.projectName=EProject Microservices
@@ -18,5 +17,5 @@ sonar.javascript.lcov.reportPaths=auth/coverage/lcov.info,product/coverage/lcov.
 sonar.language=js
 sonar.sourceEncoding=UTF-8
 
-# Quality gate settings co len met qua roi 
+# Quality gate settings co len met qua roi  kk
 sonar.qualitygate.wait=true
