fix: add sonar.projectKey and sonar.organization

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,5 @@
+sonar.projectKey=22665381-LeThiHien-EProject
+sonar.organization=lethihien1424
 sonar.host.url=https://sonarcloud.io
 
 # Project metadata
