fix: add sonar.projectKey and sonar.organization

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -10,7 +10,7 @@ sonar.projectVersion=1.0
 sonar.sources=auth/src,product/src,order/src,api-gateway
 sonar.exclusions=**/node_modules/**,**/test/**,**/coverage/**,**/*.test.js
 
-# Test settings
+# Test settings  keim ata 
 sonar.tests=auth/src/test,product/src/test
 sonar.test.inclusions=**/*.test.js
 sonar.javascript.lcov.reportPaths=auth/coverage/lcov.info,product/coverage/lcov.info
