--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=22665381-LeThiHien-EProject
-sonar.organization=lethihien1424
+sonar.projectKey=eproject-microservices
+sonar.organization=your-org-key
 
 # Project metadata
 sonar.projectName=EProject Microservices
@@ -18,5 +18,5 @@ sonar.javascript.lcov.reportPaths=auth/coverage/lcov.info,product/coverage/lcov.
 sonar.language=js
 sonar.sourceEncoding=UTF-8
 
-# Quality gate settings co len met qua roi  kk
+# Quality gate settings
 sonar.qualitygate.wait=true
