--- a/.github/workflows/security-quality.yml
+++ b/.github/workflows/security-quality.yml
@@ -9,10 +9,68 @@ on:
     # Chạy security scan hàng tuần vào thứ 2 lúc 2:00 AM
     - cron: '0 2 * * 1'
 
-# Đã xóa toàn bộ job security-scan để tránh lỗi Security Vulnerability Scan
-# Nếu muốn kiểm tra bảo mật, có thể thêm lại job này sau
-
 jobs:
+  security-scan:
+    name: Security Vulnerability Scan
+    runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        service: [auth, product, order, api-gateway]
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+    
+    - name: Install dependencies
+      run: |
+        cd ${{ matrix.service }}
+        npm ci
+    
+    - name: Run security audit
+      run: |
+        cd ${{ matrix.service }}
+        npm audit --audit-level=moderate
+    
+    - name: Run Snyk security scan
+      uses: snyk/actions/node@master
+      env:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      with:
+        args: --severity-threshold=high --file=${{ matrix.service }}/package.json --sarif-file-output=snyk.sarif
+    
+    - name: Upload Snyk results to GitHub Code Scanning
+      uses: github/codeql-action/upload-sarif@v3
+      if: always()
+      with:
+        sarif_file: snyk.sarif
+
+  code-quality:
+    name: Code Quality Analysis
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '18'
+    
+    - name: SonarQube Scan
+      uses: sonarsource/sonarqube-scan-action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
   docker-security:
     name: Docker Image Security Scan
     runs-on: ubuntu-latest
@@ -30,3 +88,16 @@ jobs:
       run: |
         cd ${{ matrix.service }}
         docker build -t ${{ matrix.service }}:latest .
+    
+    - name: Run Trivy vulnerability scanner
+      uses: aquasecurity/trivy-action@master
+      with:
+        image-ref: '${{ matrix.service }}:latest'
+        format: 'sarif'
+        output: 'trivy-results-${{ matrix.service }}.sarif'
+    
+    - name: Upload Trivy scan results
+      uses: github/codeql-action/upload-sarif@v3
+      if: always()
+      with:
+        sarif_file: 'trivy-results-${{ matrix.service }}.sarif'
