--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -89,7 +89,7 @@ jobs:
           docker-compose -f docker-compose.staging.yml up -d
           docker system prune -f
 
-  # Job deploy lên production
+  # Job deploy lên production phuong thu 
   deploy-production:
     name: Deploy to Production
     runs-on: ubuntu-latest
@@ -104,6 +104,7 @@ jobs:
     - name: Deploy to production server
       uses: appleboy/ssh-action@v1.0.0
       with:
+      
         host: ${{ secrets.PRODUCTION_HOST }}
         username: ${{ secrets.PRODUCTION_USER }}
         key: ${{ secrets.PRODUCTION_SSH_KEY }}
