--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,7 @@
-sonar.projectKey=eproject-microservices
-sonar.organization=your-org-key
+sonar.projectKey=your_real_project_key
+sonar.organization=your_real_organization
+sonar.host.url=https://sonarcloud.io
+# Không cần khai báo sonar.login ở đây, GitHub Actions sẽ truyền qua biến môi trường SONAR_TOKEN
 
 # Project metadata
 sonar.projectName=EProject Microservices
