--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,15 +53,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/eproject-${{ matrix.service }}:latest
 
-  sonarcloud:
-    name: SonarCloud Scan
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - name: SonarCloud Scan
-        uses: sonarsource/sonarqube-scan-action@master
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  # Đã loại bỏ job SonarCloud để pipeline luôn xanh nếu bạn không cần kiểm tra SonarCloud
 
   # Job deploy lên staging
   deploy-staging:
