--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,6 +1,5 @@
 name: CI/CD Pipeline
 
-
 on:
   push:
     branches:
@@ -11,6 +10,7 @@ on:
       - main
 
 jobs:
+  # ===== JOB 1: Build & Push Docker Image =====
   build-and-push:
     runs-on: ubuntu-latest
     strategy:
@@ -21,31 +21,31 @@ jobs:
           - order
           - api-gateway
     steps:
-      - name: Checkout code
+      - name: 🧾 Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
+      - name: ⚙️ Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '18'
 
-      - name: Install dependencies
+      - name: 📦 Install dependencies
         run: |
           cd ${{ matrix.service }}
           npm ci
 
-      - name: Run tests
+      - name: 🧪 Run tests
         run: |
           cd ${{ matrix.service }}
           npm test || echo "No test script found"
 
-      - name: Login to Docker Hub
+      - name: 🔐 Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and push Docker image
+      - name: 🏗️ Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
           context: ./${{ matrix.service }}
@@ -53,62 +53,61 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/eproject-${{ matrix.service }}:latest
 
-  # Đã loại bỏ job SonarCloud để pipeline luôn xanh nếu bạn không cần kiểm tra SonarCloud
-
-  # Job deploy lên staging
+  # ===== JOB 2: Deploy to Staging =====
   deploy-staging:
-    name: Deploy to Staging
+    name: 🚀 Deploy to Staging
     runs-on: ubuntu-latest
     needs: build-and-push
     if: github.ref == 'refs/heads/develop'
     environment: staging
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-    
-    - name: Deploy to staging server
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.STAGING_HOST }}
-        username: ${{ secrets.STAGING_USER }}
-        key: ${{ secrets.STAGING_SSH_KEY }}
-        script: |
-          cd /path/to/staging/eproject
-          git pull origin develop
-          docker-compose -f docker-compose.staging.yml down
-          docker-compose -f docker-compose.staging.yml pull
-          docker-compose -f docker-compose.staging.yml up -d
-          docker system prune -f
+      - name: 🧾 Checkout code
+        uses: actions/checkout@v4
 
-  # Job deploy lên production phuong thu 
+      - name: 🔑 Deploy to Staging Server
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.STAGING_HOST }}
+          username: ${{ secrets.STAGING_USER }}
+          key: ${{ secrets.STAGING_SSH_KEY }}
+          script: |
+            set -e
+            cd /path/to/staging/eproject || exit 1
+            git pull origin develop
+            docker-compose -f docker-compose.staging.yml down
+            docker-compose -f docker-compose.staging.yml pull
+            docker-compose -f docker-compose.staging.yml up -d
+            docker system prune -f
+
+  # ===== JOB 3: Deploy to Production =====
   deploy-production:
-    name: Deploy to Production
+    name: 🚀 Deploy to Production
     runs-on: ubuntu-latest
     needs: build-and-push
     if: github.ref == 'refs/heads/main'
     environment: production
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      with:
-        token: ${{ secrets.GITHUB_TOKEN }}
-    - name: Deploy to production server
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.PRODUCTION_HOST }}
-        username: ${{ secrets.PRODUCTION_USER }}
-        key: ${{ secrets.PRODUCTION_SSH_KEY }}
-        script: |
-          set -x
-          cd ~/EProject-Phase-1 || cd /home/${{ secrets.PRODUCTION_USER }}/EProject-Phase-1 || cd /opt/eproject-production || exit 1
-          git pull origin main || true
-          docker-compose -f docker-compose.prod.yml down || true
-          docker-compose -f docker-compose.prod.yml pull
-          docker-compose -f docker-compose.prod.yml up -d
-          docker system prune -f
-    
-    - name: Health check
-      run: |
-        sleep 30
-        curl -f ${{ secrets.PRODUCTION_URL }}/health || exit 1
+      - name: 🧾 Checkout code
+        uses: actions/checkout@v4
+
+      - name: 🔑 Deploy to Production Server
+        uses: appleboy/ssh-action@v1.0.0
+        with:
+          host: ${{ secrets.PRODUCTION_HOST }}
+          username: ${{ secrets.PRODUCTION_USER }}
+          key: ${{ secrets.PRODUCTION_SSH_KEY }}
+          script: |
+            set -e
+            cd ~/EProject-Phase-1 || cd /home/${{ secrets.PRODUCTION_USER }}/EProject-Phase-1 || cd /opt/eproject-production || exit 1
+            git pull origin main
+            docker-compose -f docker-compose.prod.yml down || true
+            docker-compose -f docker-compose.prod.yml pull
+            docker-compose -f docker-compose.prod.yml up -d
+            docker system prune -f
+
+      - name: 🔍 Health check
+        run: |
+          echo "⏳ Waiting for containers to start..."
+          sleep 30
+          echo "🚦 Checking system health..."
+          curl -f ${{ secrets.PRODUCTION_URL }}/health || (echo "❌ Health check failed" && exit 1)
