--- a/.github/workflows/docker-cicd.yml
+++ b/.github/workflows/docker-cicd.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        service: [auth, product, order]
+        service: [auth, product, order, api-gateway]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
