--- a/.github/workflows/docker-cicd.yml
+++ b/.github/workflows/docker-cicd.yml
@@ -5,7 +5,29 @@ on:
     branches: [ "main" ]  # Tự động chạy khi push code lên nhánh main
 
 jobs:
+  build-test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        service: [auth, product, order, api-gateway]
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - name: Install dependencies
+        run: |
+          cd ${{ matrix.service }}
+          npm install
+      - name: Run tests
+        run: |
+          cd ${{ matrix.service }}
+          npm test
+
   build-and-push:
+    needs: build-test
     runs-on: ubuntu-latest
 
     strategy:
